<resources>
    <string name="app_name">6thSemOne</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="id">Id</string>
    <string name="marks">Marks</string>
    <string name="add">Add</string>
    <string name="view_all">View All</string>
    <string name="myname">MyName</string>
    <string name="mr_pichai">Mr.Pichai</string>
    <string name="mr_roshan">Mr. Roshan</string>
    <string name="miss_brogdon">Miss. Brogdon</string>
    <string name="mr_sparrow">Mr. Sparrow</string>
    <string name="office">Office</string>
    <string name="delete">Delete</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="custom_list_view">Custom List View</string>
    <string name="listview_activity">ListView Activity</string>
    <string name="recyclerview_activity">RecyclerView Activity</string>
    <string name="cardview_activity">CardView Activity</string>
    <string name="custom_gridview">Custom GridView</string>
    <string name="background_thread">BackGround Thread</string>
    <string name="progress_bar">Progress Bar</string>
    <string name="sql_lite">Sql Lite</string>
    <string name="update">Update</string>
    <string name="more">More</string>
    <string name="about_us">About Us</string>
    <string name="log_out">Log Out</string>
</resources>
