<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/db_lv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/fg"
    android:foreground="?android:attr/selectableItemBackground">

    <TextView
        android:textStyle="bold"
        android:id="@+id/db_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_margin="20dp"
        android:textColor="@android:color/white"
        android:layout_centerVertical="true"
        android:text="@string/id"/>

    <LinearLayout
        android:id="@+id/db_lin"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/db_id"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/db_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/full_name"
            android:textSize="20sp"
            android:padding="5dp"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/db_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/phone_number"
            android:textSize="20sp"
            android:textStyle="italic"/>
    </LinearLayout>
    <TextView
        android:id="@+id/db_marks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="20dp"
        android:textColor="@android:color/white"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:text="@string/marks"/>
</RelativeLayout>